--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header img {
 
 /* Partners section styles */
 .partners {
-	background-color: #7AC899;
+	background-color: #CFF4FD;
 	font-size: 1 rem;
 	font-weight: 100;
 	color: #000000;
