--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header img {
 
 /* Partners section styles */
 .partners {
-	background-color: #CFF4FD;
+	background-color: #85DEF3;
 	font-size: 1 rem;
 	font-weight: 100;
 	color: #000000;
@@ -185,7 +185,7 @@ header img {
 	font-weight: 100;
 	color: #000;
 	text-align: center;
-	background-color: #CFF4FD;
+	background-color: #85DEF3;
 }
 
 .cards-description{
@@ -219,7 +219,7 @@ header img {
 /* See you later */
 
 .see-you-later{
-	background-color: #CFF4FD;
+	background-color: #85DEF3;
 	display: flex;
 	font-size: 5rem;
 	font-weight: bolder;
